--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ ul {
 }
 
 img {
+  height: auto;
   display: block;
   max-width: 100%;
 }
@@ -72,9 +73,11 @@ img {
   flex-wrap: wrap;
   align-items: center;
 }
+.header nav {
+  margin-left: 93px;
+}
 
 .header-menu {
-  margin-left: 93px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -85,7 +88,6 @@ img {
 
 .header-links {
   display: flex;
-  flex-wrap: wrap;
   margin-left: auto;
 }
 .header-links .item + .item {
@@ -127,16 +129,16 @@ img {
 /* --------------- footer --------------- */
 
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #2f303a;
 }
 
-.footer .container {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.footer address {
+  margin-top: 20px;
 }
 
 .footer-links {
-  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -166,6 +168,8 @@ img {
 
 /* --------------- hero section --------------- */
 .hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: #2f303a;
 }
 
@@ -260,8 +264,6 @@ img {
   background-color: var(--second-bgcolor);
 }
 .team-members .item {
-  max-width: 270px;
-
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -299,7 +301,7 @@ img {
   display: flex;
   flex-wrap: wrap;
 
-  margin-top: calc(50px - var(--list-space));
+  margin-top: calc(-1 * var(--list-space));
   margin-left: calc(-1 * var(--list-space));
 }
 
@@ -335,6 +337,7 @@ img {
 .projects-filter {
   display: flex;
   justify-content: center;
+  margin-bottom: 50px;
 }
 .projects-filter .item + .item {
   margin-left: 8px;
